# rexrov2

./: CMakeLists.txt  package.xml
.github/workflows/: action-ros-ci.yaml  action-ros-lint.yaml
rexrov2/: CMakeLists.txt  package.xml
rexrov2_description/: CMakeLists.txt  package.xml
rexrov2_description/launch/: upload.launch.py
rexrov2_description/robots/: rexrov2_default.xacro  teste.xacro
rexrov2_description/test/: upload.test.py
rexrov2_description/urdf/: rexrov2_base.xacro
