<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rexrov2</name>
  <version>0.1.0</version>
  <description>The RexROV 2 underwater vehicle packages.</description>

  <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rexrov2_description</exec_depend>
  <exec_depend>rexrov2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

 <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
