<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rexrov2</name>
  <version>0.0.0</version>
  <description>The RexROV 2 metapackage.</description>

  <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rexrov2_description</exec_depend>

 <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
