<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rexrov2_description</name>
  <version>0.1.0</version>
  <description>The robot description files for the RexROV 2 underwater vehicle and launch files to spawn the model in different configurations.</description>

  <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

 <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
